After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687088 - rtmpdump options are not handled properly while opening XSPF files
rtmpdump options are not handled properly while opening XSPF files
Status: RESOLVED FIXED
Product: totem-pl-parser
Classification: Core
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: totem-pl-parser-maint
totem-pl-parser-maint
Depends on:
Blocks:
 
 
Reported: 2012-10-29 07:44 UTC by Balló György
Modified: 2012-10-29 10:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] Handle URIs properly in XSPF playlists (2.82 KB, patch)
2012-10-29 07:44 UTC, Balló György
none Details | Review
plparse: Don't overescape parse URIs in XSPF (4.86 KB, patch)
2012-10-29 10:21 UTC, Bastien Nocera
committed Details | Review

Description Balló György 2012-10-29 07:44:23 UTC
Created attachment 227505 [details] [review]
[PATCH] Handle URIs properly in XSPF playlists

Currently the options for rtmpdump (e.g. swfUrl, pageUrl) are not handled properly while opening XSPF files, because the spaces between the URL and the parameters are encoded into %20.

I created a patch, which solves the problem. It bypasses resolving URIs, and return them directly. It is something similar as PLS parser works[1].

Please note that I haven't tested the patch for all cases, so be careful.

[1] http://git.gnome.org/browse/totem-pl-parser/tree/plparse/totem-pl-parser-pls.c#n280
Comment 1 Bastien Nocera 2012-10-29 10:21:58 UTC
Created attachment 227511 [details] [review]
plparse: Don't overescape parse URIs in XSPF

Passing a URI through g_file_new()/g_file_get_uri() will
create escaping problems if the original URI contained spaces
on purpose (for example, rtmp URLs with additional parameters).

Original patch by György Balló <ballogy@freestart.hu>
Comment 2 Bastien Nocera 2012-10-29 10:22:36 UTC
Attachment 227511 [details] pushed as feeb3d3 - plparse: Don't overescape parse URIs in XSPF