plparse: Don't overescape parse URIs in XSPF

Passing a URI through g_file_new()/g_file_get_uri() will
create escaping problems if the original URI contained spaces
on purpose (for example, rtmp URLs with additional parameters).

Original patch by György Balló <ballogy@freestart.hu>

https://bugzilla.gnome.org/show_bug.cgi?id=687088